--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,11 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "cstring": "cpp",
+        "list": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "ios": "cpp"
     }
 }
